@@ -6,10 +6,11 @@ Copyright (C) 2000-2016  Stephane Fillod, and others
 Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net
 
 Version 3.2
-        2017-06-30
+        2017-08-31
         * New models, IC-7850/IC-7851 in IC-785x.  Mike, W9MDB
         * Fix ft991_get_mode, Mike, W9MDB
         * New model, FT-891.  Mike, W9MDB
+        * Build instructions and test script for Python3
 
 Version 3.1
 	2016-12-31
